--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "axios": "^1.2.6",
     "react": "18.2.0",
     "react-native": "0.71.1"
